# FNQS_ViT

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/fnqs_vit/: __init__.py
src/fnqs_vit/experiments/: compute_observables.py  train_j1j2_fnqs.py
src/fnqs_vit/fnqs/: embedding.py  model.py  patching.py  transformer.py
src/fnqs_vit/hamiltonians/: j1j2_square.py  lattice.py
src/fnqs_vit/tests/: test_embedding.py  test_import.py  test_j1j2_hamiltonian.py  test_local_energy.py  test_model.py  test_observables.py  test_patching.py  test_sampler.py  test_sampler_heisenberg.py  test_sr.py  test_transformer.py
src/fnqs_vit/utils/: device.py
src/fnqs_vit/vmc/: local_energy.py  observables.py  sampler.py  sampler_heisenberg.py  sampler_sz.py  sr.py
